@@ -1,6 +1,7 @@
 Release Note
 
 * current
+  * fixed to kill jobs in merging
   * fixed runRebro for JEDI analysis
   * added jediTaskID and datasetID in the where clause of updateUnmergedJobs
   * setting maxattempt when JEDI files are produced
